# misaki

./: MANIFEST.in  README.md  pyproject.toml  setup.py  test.ipynb
misaki/: en.py  espeak.py  hangul_classes.py  hangul_rules.py  hangul_tools.py  hangul_worker.py  hanja_tools.py  ja.py  ko.py  ko_convert.py  num2kana.py  token.py  tone_sandhi.py  transcription.py  vi.py  zh.py  zh_frontend.py
misaki/data/: gb_gold.json  gb_silver.json  us_gold.json  us_silver.json  vi_symbols.json
misaki/hangul/: classes.py  hanja_tools.py  rules.py  worker.py
